# Simple-Event-Manager

./: CMakeLists.txt  README  main.cpp
EventCollection/: event_collection.cpp  event_collection.h
Model/: event.cpp  event.h
UI/: menu.cpp  menu.h
UI/command/: CreateNewEventCommand.cpp  CreateNewEventCommand.h  DeleteExistingEventCommand.cpp  DeleteExistingEventCommand.h  PrintAllEventsCommand.cpp  PrintAllEventsCommand.h  UpdateExistngEventCommand.cpp  UpdateExistngEventCommand.h  command.h
Utils/: date.cpp  date.h  time.cpp  time.h
